--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,11 +28,13 @@
 	
 	<!--Horizontal Site Directory List-->
 	<div id="siteList">
-		<a href="home">Home</a>
-		<a href="insert">Insert</a>
-		<a href="update">Update</a>
-		<a href="search">Search</a>
-		<a href="delete">Delete</a>
+		<a href="home">Home</a><br>
+		<a href="stadium_table">Stadium Table</a><br>
+		<a href="team_table">Team Table</a><br>
+		<a href="league_table">League Table</a><br>
+		<a href="sponsor_table">Sponsor Table</a><br>
+		<a href="player_table">Player Table</a><br>
+		<a href="search">Search Queries</a><br>	
 	</div>
 	<br>
 	
