--- a/views/sponsor_table.handlebars
+++ b/views/sponsor_table.handlebars
@@ -7,29 +7,38 @@
 		<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet"> <!--Patua One Font-->
 	</head>
 	<body>
-	
 	<!--Title-->
 	<div id="title">
 		<img id="futbol" src="images/futbol.PNG" alt="futbol">
-		<h1 id="mainTitle"><b>SEARCH<b></h1>
+		<h1 id="mainTitle"><b>SPONSOR<b></h1>
 		<img id="futbol" src="images/futbol.PNG" alt="futbol">
 	</div>
 	<br>
 	
-	<!--Search-->
-	<br></br>
-	<span id="searchTag"><b><i>*Select any of the below searches to test some database queries on the Fútbol database.*</i></b></span>
-	<br>
-	<div id="search">
-		<br>
-			<span id="search1">Search for all English Players with 10+ goals:</span>
-			<button id="searchButton1" class="submit">Search</button>
-		</br>
-		<br>
-			<span id="search2">Search for UEFA Champions League Teams that have Stadiums with GrassMaster type pitch and 1+ Players with an Adidas Sponsorship:</span>
-			<button id="searchButton2" class="submit">Search</button>
-		</br>
-	</div>
+	<!--Showing Tables-->
+	<!--Sponsor-->
+	<br></br><br></br>
+	<span id="tableTitle">SPONSOR TABLE</span>
+	<table>
+		<thead> 
+			<th>SponsorId</th>
+			<th>Name</th> 
+			<th>Revenue</th>
+			<th>Delete</th>
+			<th>Edit</th>
+		</thead> 
+		<tbody> 
+			{{#each sponsor}} 
+			<tr> 
+				<td>{{sponsorId}}</td>
+				<td>{{name}}</td> 
+				<td>{{revenue}}</td>
+				<td><button onclick="deletePerson({{stadiumId}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
+				<td><a href="/stadium/{{stadiumId}}">Update</a></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
+			</tr> 
+			{{/each}}
+		</tbody>
+	</table>
 	
 	<!--Horizontal Site Directory List-->
 	<div id="siteList">
@@ -48,7 +57,7 @@
 	<div id="copyright"><b>OSU 340 - Cedric Eicher - Lennard Gorter - Group 18 - All Rights Reserved</b></div>
 	
 	<!--JavaScript Call-->
-	<script src="js/search.js"></script>
+	<script src="js/view_table.js"></script>
 	
 	</body>
 </html>
