Adding Insert functionality to Stadium

--- a/views/stadium_table.handlebars
+++ b/views/stadium_table.handlebars
@@ -45,6 +45,14 @@
 			</tr> 
 			{{/each}}
 		</tbody>
+
+		<form id="insertstadium" action="/stadium_table" method="post">
+			Stadium Name: <input type="text" name="name"><br>
+			City Name: <input type="text" name="city"><br>
+			Capacity: <input type="number" name="capacity"><br>
+			Pitch Type: <input type="text" name="pitch"><br>
+			Year Built: <input type="number" name="capacity"><br>
+		</form>
 	</table>
 	
 	<!--Horizontal Site Directory List-->
