--- a/views/stadium_table.handlebars
+++ b/views/stadium_table.handlebars
@@ -47,12 +47,15 @@
 		</tbody>
 
 		<form id="insertstadium" action="/stadium_table" method="post">
+			<br>Insert a new Stadium!<br>
 			Stadium Name: <input type="text" name="name"><br>
 			City Name: <input type="text" name="city"><br>
 			Capacity: <input type="number" name="capacity"><br>
 			Pitch Type: <input type="text" name="pitch"><br>
-			Year Built: <input type="number" name="capacity"><br>
+			Year Built: <input type="number" name="year"><br>
+			<input type="submit" value="Submit">
 		</form>
+		
 	</table>
 	
 	<!--Horizontal Site Directory List-->
