--- a/views/player_table.handlebars
+++ b/views/player_table.handlebars
@@ -56,6 +56,29 @@
 			</tr> 
 			{{/each}}
 		</tbody>
+			<form id="insertstadium" action="/stadium_table" method="post">
+				<br>Insert a new Player!<br>
+				Select a Team: <select name="teamId">
+					{{#each team}}
+					<option value="{{teamId}}">{{name}}</option>
+					{{/each}}
+				</select><br>
+				First Name: <input type="text" name="fname"><br>
+				Last Name: <input type="text" name="lname"><br>
+				Position: <input type="text" name="position"><br>
+				Appearances: <input type="number" name="appearances"><br>
+				Goals: <input type="number" name="goals"><br>
+				Assists: <input type="number" name="assists"><br>
+				Height (in inches): <input type="number" name="height"><br>
+				Birthdate: <input type="date" name="birthdate"><br>
+				Nationality: <input type="text" name="nationality"><br>
+				Select a Sponsor: <select name="sponsorId">
+					{{#each sponsor}}
+					<option value="{{sponsorId}}">{{name}}</option>
+					{{/each}}
+				</select><br>
+			<input type="submit" value="Submit">
+		</form>
 	</table>
 	
 	<!--Horizontal Site Directory List-->
