--- a/views/sponsor_table.handlebars
+++ b/views/sponsor_table.handlebars
@@ -38,6 +38,14 @@
 			</tr> 
 			{{/each}}
 		</tbody>
+
+		<form id="insertsponsor" action="/sponsor_table" method="post">
+			<br>Insert a new Sponsor!<br>
+        	<br>Sponsor Name: <input type="text" name="name"><br>
+        	Sponsor Revenue (in billions): <input type="number" name="revenue"><br>
+        	<input type="submit" value="Submit">
+        </form>
+
 	</table>
 	
 	<!--Horizontal Site Directory List-->
