--- a/views/player_table.handlebars
+++ b/views/player_table.handlebars
@@ -56,7 +56,7 @@
 			</tr> 
 			{{/each}}
 		</tbody>
-			<form id="insertstadium" action="/stadium_table" method="post">
+			<form id="insertplayer" action="/player_table" method="post">
 				<br>Insert a new Player!<br>
 				Select a Team: <select name="teamId">
 					{{#each team}}
