--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,9 +32,10 @@
 		<a href="stadium_table">Stadium Table</a><br>
 		<a href="team_table">Team Table</a><br>
 		<a href="league_table">League Table</a><br>
+		<a href="team-league_table">Team-League Table</a><br>
 		<a href="sponsor_table">Sponsor Table</a><br>
 		<a href="player_table">Player Table</a><br>
-		<a href="search">Search Queries</a><br>	
+		<a href="search">Search Queries</a><br>			
 	</div>
 	<br>
 	
@@ -43,7 +44,7 @@
 	<span id="copyright"><b>OSU 340 - Cedric Eicher - Lennard Gorter - Group 18 - All Rights Reserved</b><span>
 	
 	<!--JavaScript Call-->
-	<script src="js/home.js"></script>
+	<!--<script src="js/home.js"></script>-->
 	
 	</body>
 </html>
