--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -37,6 +37,7 @@
 		<a href="stadium_table">Stadium Table</a><br>
 		<a href="team_table">Team Table</a><br>
 		<a href="league_table">League Table</a><br>
+		<a href="team-league_table">Team-League Table</a><br>
 		<a href="sponsor_table">Sponsor Table</a><br>
 		<a href="player_table">Player Table</a><br>
 		<a href="search">Search Queries</a><br>	
