--- a/views/team_table.handlebars
+++ b/views/team_table.handlebars
@@ -29,7 +29,6 @@
 			<th>Games Played</th> 
 			<th>Points</th>
 			<th>Delete</th>
-			<th>Edit</th>
 		</thead> 
 		<tbody> 
 			{{#each team}} 
@@ -41,8 +40,7 @@
 				<td>{{standing}}</td>
 				<td>{{gamesPlayed}}</td>
 				<td>{{points}}</td>
-				<td><button onclick="deletePerson({{stadiumId}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
-				<td><a href="/stadium/{{stadiumId}}">Update</a></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
+				<td><button onclick="deleteTeam({{teamId}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
 			</tr> 
 			{{/each}}
 		</tbody>
@@ -54,9 +52,10 @@
 		<a href="stadium_table">Stadium Table</a><br>
 		<a href="team_table">Team Table</a><br>
 		<a href="league_table">League Table</a><br>
+		<a href="team-league_table">Team-League Table</a><br>
 		<a href="sponsor_table">Sponsor Table</a><br>
 		<a href="player_table">Player Table</a><br>
-		<a href="search">Search Queries</a><br>	
+		<a href="search">Search Queries</a><br>		
 	</div>
 	<br>
 	
@@ -65,7 +64,7 @@
 	<div id="copyright"><b>OSU 340 - Cedric Eicher - Lennard Gorter - Group 18 - All Rights Reserved</b></div>
 	
 	<!--JavaScript Call-->
-	<script src="js/view_table.js"></script>
+	<script src="js/delete_team.js"></script>
 	
 	</body>
 </html>
