--- a/views/player_table.handlebars
+++ b/views/player_table.handlebars
@@ -59,7 +59,7 @@
 			<form id="insertplayer" action="/player_table" method="post">
 				<br>Insert a new Player!<br>
 				Select a Team: <select name="teamId">
-					{{#each team}}
+					{{#each teams}}
 					<option value="{{teamId}}">{{name}}</option>
 					{{/each}}
 				</select><br>
