--- a/views/player_table.handlebars
+++ b/views/player_table.handlebars
@@ -73,7 +73,7 @@
 				Birthdate: <input type="date" name="birthdate"><br>
 				Nationality: <input type="text" name="nationality"><br>
 				Select a Sponsor: <select name="sponsorId">
-					{{#each sponsor}}
+					{{#each sponsors}}
 					<option value="{{sponsorId}}">{{name}}</option>
 					{{/each}}
 				</select><br>
