--- a/views/team_table.handlebars
+++ b/views/team_table.handlebars
@@ -44,6 +44,21 @@
 			</tr> 
 			{{/each}}
 		</tbody>
+
+		<form id="insertteam" action="/team_table" method="post">
+			<br>Insert a new Team!<br>
+        	<br>Team Name: <input type="text" name="name"><br>
+        	City: <input type="text" name="city"><br>
+			Select a Stadium: <select name="stadiumId">
+				{{#each stadiums}}
+				<option value="{{stadiumId}}">{{name}}</option>
+				{{/each}}
+			</select>
+			Current League Standing: <input type="number" name="standing"><br>
+			Games Played: <input type="number" name="gamesPlayed"><br>
+			Points: <input type="number" name="points"><br>
+        	<input type="submit" value="Submit">
+        </form>
 	</table>
 	
 	<!--Horizontal Site Directory List-->
