--- a/views/league_table.handlebars
+++ b/views/league_table.handlebars
@@ -49,7 +49,7 @@
 				{{#each teams}}
 				<option value="{{teamId}}">{{name}}</option>
 				{{/each}}
-			</select>
+			</select><br>
 			Total Games per Season: <input type="number" name="totalGames"><br>
         	<input type="submit" value="Submit">
         </form>
