--- a/views/team_table.handlebars
+++ b/views/team_table.handlebars
@@ -53,7 +53,7 @@
 				{{#each stadiums}}
 				<option value="{{stadiumId}}">{{name}}</option>
 				{{/each}}
-			</select>
+			</select><br>
 			Current League Standing: <input type="number" name="standing"><br>
 			Games Played: <input type="number" name="gamesPlayed"><br>
 			Points: <input type="number" name="points"><br>
