--- a/views/team-league_table.handlebars
+++ b/views/team-league_table.handlebars
@@ -14,26 +14,26 @@
 		<img id="futbol" src="images/futbol.PNG" alt="futbol">
 	</div>
 	<br>
-	
-	<!--Showing Tables-->	
+
+	<!--Showing Tables-->
 	<!--Team-->
 	<br></br><br></br>
 	<span id="tableTitle">TEAM-LEAGUE TABLE</span>
 	<table>
-		<thead> 
+		<thead>
 			<th>TeamLeagueId</th>
 			<th>TeamId</th>
-			<th>LeagueId</th> 
+			<th>LeagueId</th>
 			<th>Delete</th>
-		</thead> 
-		<tbody> 
-			{{#each team_league}} 
-			<tr> 
-				<td>{{team_leagueId}}</td>
-				<td>{{teamId}}</td>
-				<td>{{leagueId}}</td> 
-				<td><button onclick="deleteTeamLeague({{team_leagueId}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
-			</tr> 
+		</thead>
+		<tbody>
+			{{#each team_league}}
+			<tr>
+				<td>{{id}}</td>
+				<td>{{teamName}}</td>
+				<td>{{leagueName}}</td>
+				<td><button onclick="deleteTeamLeague({{id}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
+			</tr>
 			{{/each}}
 		</tbody>
 
@@ -53,7 +53,7 @@
         </form>
 
 	</table>
-	
+
 	<!--Horizontal Site Directory List-->
 	<div id="siteList">
 		<a href="home">Home</a><br>
@@ -63,16 +63,15 @@
 		<a href="team-league_table">Team-League Table</a><br>
 		<a href="sponsor_table">Sponsor Table</a><br>
 		<a href="player_table">Player Table</a><br>
-		<a href="search">Search Queries</a><br>	
 	</div>
 	<br>
-	
+
 	<!--Closing Remarks-->
 	<br>
 	<div id="copyright"><b>OSU 340 - Cedric Eicher - Lennard Gorter - Group 18 - All Rights Reserved</b></div>
-	
+
 	<!--JavaScript Call-->
 	<script src="js/delete_team-league.js"></script>
-	
+
 	</body>
 </html>
