--- a/views/player_table.handlebars
+++ b/views/player_table.handlebars
@@ -52,7 +52,7 @@
 				<td>{{nationality}}</td>
 				<td>{{sponsorId}}</td>
 				<td><button onclick="deletePlayer({{playerId}})">Delete</button></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
-				<td><a href="/player/{{playerId}}">Update</a></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
+				<td><a href="/player_table/{{playerId}}">Update</a></td> <!--Taken directly from Justin's code. Needs tieing to actual JS action-->
 			</tr>
 			{{/each}}
 		</tbody>
