--- a/views/update-player.handlebars
+++ b/views/update-player.handlebars
@@ -21,8 +21,8 @@
 		</select><br>
 </form>
 <button onclick="updatePlayer({{player.playerId}})">Submit Updates</button>
-<script src="js/selectedteam.js"></script>
-<script src="js/selectedsponsor.js"></script>
-<script src="js/updateplayer.js"></script>
+<script src="/js/selectedteam.js"></script>
+<script src="/js/selectedsponsor.js"></script>
+<script src="/js/updateplayer.js"></script>
 <script defer>selectTeam({{player.teamId}});</script>
 <script defer>selectSponsor({{player.sponsorId}});</script>
